[gd_scene load_steps=4 format=3 uid="uid://6r4rm2hswvtu"]

[ext_resource type="Script" uid="uid://dj8n7em8k21sn" path="res://inventory_and_recipes/user_interface/inventory_dialog/inventory_dialog.gd" id="1_uehr3"]
[ext_resource type="PackedScene" uid="uid://cna2r3rric5yl" path="res://inventory_and_recipes/user_interface/item_slot/item_slot.tscn" id="2_l2s8o"]
[ext_resource type="PackedScene" uid="uid://d1efscup5qx56" path="res://inventory_and_recipes/user_interface/item_grid/item_grid.tscn" id="3_nxv4r"]

[node name="InventoryDialog" type="PanelContainer" groups=["InteractiveDialog"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -104.0
offset_bottom = -240.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uehr3")
slot_scene = ExtResource("2_l2s8o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inventory"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " X "

[node name="GridContainer" parent="VBoxContainer" instance=ExtResource("3_nxv4r")]
unique_name_in_owner = true
layout_mode = 2
has_selection = true

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UseButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
disabled = true
text = "Use"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="selected_item_slot_changed" from="VBoxContainer/GridContainer" to="." method="_on_grid_container_selected_item_slot_changed"]
[connection signal="pressed" from="VBoxContainer/UseButton" to="." method="_on_use_button_pressed"]
